--- a/Mission_1_Test.ipynb
+++ b/Mission_1_Test.ipynb
@@ -3395,10 +3395,52 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YU8qK7oez4X6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Document the training process and challenges.\n",
+        "I trained the models using MSE, MAE, and R² to check performance. I used GridSearchCV to tune the Decision Tree and RandomizedSearchCV for Random Forest.\n",
+        "Challenges I faced:\n",
+        "\n",
+        "Data imbalance in categories like education level.\n",
+        "\n",
+        "Correctly encoding categorical features before prediction.\n",
+        "\n",
+        "Overfitting problem in Decision Tree.\n",
+        "\n",
+        "Making sure the data scaling was the same for training and testing.\n",
+        "\n",
+        "Validating user inputs in the Gradio interface.\n",
+        "\n",
+        "2. Which model performed best and why?\n",
+        "The Random Forest model worked better than the Decision Tree. It was less overfitting because it uses many trees (ensemble), so predictions were more accurate and generalize better. The Decision Tree overfitted the training data and didn’t perform well on new data.\n",
+        "\n",
+        "3. Key insights from the model.\n",
+        "Education level and other features affected the predictions a lot.\n",
+        "\n",
+        "Fixing data imbalance and encoding helped improve results.\n",
+        "\n",
+        "Ensemble models like Random Forest give better accuracy.\n",
+        "\n",
+        "Scaling data the same way in training and testing is important.\n",
+        "\n",
+        "Using Gradio helped test the model easily, but input validation is necessary."
+      ],
+      "metadata": {
+        "id": "lxHwad2tz5ut"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BfDwIOB12FNj"
+        "id": "Tu4E53kKz7DY"
       },
       "execution_count": null,
       "outputs": []
